--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,6 @@
     </distributionManagement>
 
     <dependencies>
-        <!--jwt token 解析组件-->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.0</version>
-        </dependency>
         <!-- web项目依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -157,6 +151,20 @@
             <version>RELEASE</version>
         </dependency>
         <!--导入导出excel依赖结束-->
+
+        <!-- 单元测试依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.vaadin.external.google</groupId>
+                    <artifactId>android-json</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
