--- a/src/main/resources/generator.yaml
+++ b/src/main/resources/generator.yaml
@@ -1,7 +1,7 @@
 db:
-  url: jdbc:mysql://127.0.0.1:3306/aim_logical_datamodel?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+  url: jdbc:mysql://127.0.0.1:3306/aim_device_materials?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
   username: root
   password: root
 author: auto
-packageName: com.yfny.datamodel
+packageName: com.device.materials
 filePath: /WorkSpace/Auto/
