--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,20 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+        <spring-boot.version>2.3.8.RELEASE</spring-boot.version>
         <nacos-spring.version>0.9.0.RELEASE</nacos-spring.version>
-        <aspectjweaver.version>1.8.13</aspectjweaver.version>
-        <commons-lang3.version>3.9</commons-lang3.version>
+        <aspectjweaver.version>1.9.7</aspectjweaver.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-text.version>1.9</commons-text.version>
-        <json.version>20180813</json.version>
+        <json.version>20210307</json.version>
         <oss-parent.version>9</oss-parent.version>
-        <commons-io.version>2.6</commons-io.version>
-        <freemarker.version>2.3.28</freemarker.version>
-        <snakeyaml.version>1.24</snakeyaml.version>
-        <mapper-spring-boot.version>2.1.3</mapper-spring-boot.version>
-        <pagehelper-spring-boot.version>1.2.3</pagehelper-spring-boot.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <freemarker.version>2.3.31</freemarker.version>
+        <snakeyaml.version>1.29</snakeyaml.version>
+        <mapper-spring-boot.version>2.1.5</mapper-spring-boot.version>
+        <pagehelper-spring-boot.version>1.4.0</pagehelper-spring-boot.version>
         <txlcn.tx.version>5.0.2.RELEASE</txlcn.tx.version>
-        <mysql-connector-java.version>5.1.47</mysql-connector-java.version>
+        <mysql-connector-java.version>5.1.49</mysql-connector-java.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
@@ -117,6 +117,11 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>${snakeyaml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
         </dependency>
         <!-- mysql数据库驱动 -->
         <dependency>
